--- a/hash/package.json
+++ b/hash/package.json
@@ -11,13 +11,9 @@
     "express": "~4.16.0",
     "express-session": "^1.16.1",
     "express-sessions": "^1.0.6",
-    "formidable": "^1.2.1",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
-    "mongodb": "^3.3.2",
     "morgan": "~1.9.0",
-    "multer": "^1.4.1",
-    "npm": "^6.9.0",
-    "request": "^2.88.0"
+    "multer": "^1.4.1"
   }
 }
